feat: TLY-63 Post, PostLike fixture 생성 및 게시글, 게시글 좋아요 관련 테스트 fixture 기반으로 전환 및 리팩토링